# Projet_WebScraping

./: Scrapping Circuit.py  hello.py  page_rendue.html  pyproject.toml  tables_live.json
Page HTML/: Formula 1 World Championship (1950 - 2024).json
outputs/: constructor_results.json  constructor_standings.json  constructors.json  driver_standings.json  drivers.json  lap_times.json  pit_stops.json  qualifying.json  races.json  results.json  seasons.json  sprint_results.json  status.json
