[project]
name = "projet-webscraping-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "webdriver-manager>=4.0.2",
]
